@@ -245,7 +245,6 @@ scicom          -- Search Scientific Commons
 scirus          -- Search for science using Scirus (scirus.com)
 scitopia        -- Search for science with scitopia.org
 scpan           -- Search the Comprehensive Perl Archive Network (search.cpan.org)
-scroogle        -- Search Google anonymously via Scroogle (www.scroogle.org)
 slashdot        -- Search stories on Slashdot (www.slashdot.org)
 slinuxdoc       -- Search entries in LDP (www.linuxdoc.org)
 sourceforge     -- Search SourceForge (www.sourceforge.net)
