@@ -87,7 +87,6 @@ elvi.1sr.gz @mandir@/man1/scicom.1sr.gz
 elvi.1sr.gz @mandir@/man1/scitopia.1sr.gz
 elvi.1sr.gz @mandir@/man1/scirus.1sr.gz
 elvi.1sr.gz @mandir@/man1/scpan.1sr.gz
-elvi.1sr.gz @mandir@/man1/scroogle.1sr.gz
 elvi.1sr.gz @mandir@/man1/slashdot.1sr.gz
 elvi.1sr.gz @mandir@/man1/slinuxdoc.1sr.gz
 elvi.1sr.gz @mandir@/man1/sourceforge.1sr.gz
