@@ -1,6 +1,0 @@
-scroogle surfraw
-<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
-scroogle -nossl surfraw
-<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
-scroogle -lang=en surfraw
-<a href="http://surfraw.alioth.debian.org/"><b>Surfraw</b>
